<resources>
    <string name="app_name">ResumeCraft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="log_in">LOG IN</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? sign up</string>
    <string name="version">VERSION : 3.1.2.8</string>
    <string name="already_have_account_log_in">already have account? log in</string>
    <string name="save">SAVE</string>
    <string name="submit">SUBMIT</string>
    <string name="year">Year</string>
    <string name="education">Education</string>
    <string name="course_degree">Course / Degree</string>
    <string name="school_college">School / College</string>
    <string name="grade_score">Grade / Score</string>
    <string name="experience">Experience</string>
    <string name="company_name">Company_name</string>
    <string name="job_title">Job_title</string>
    <string name="start_date">Start_date</string>
    <string name="end_date">End_date</string>
    <string name="details">Details</string>
    <string name="skills">Skills</string>
    <string name="skill_name">Skill_name</string>
    <string name="skill_level">Skill_level</string>
    <string name="projects">Projects</string>
    <string name="project_name">Project name</string>
    <string name="description">Description</string>
    <string name="objective">Objective</string>
    <string name="cancel">Cancel</string>
    <string name="delete_education">delete_education</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="templates">template</string>
    <string name="resumecraft">ResumeCraft</string>
    <string name="logo">logo</string>
    <string name="create_profile">Create Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="preview">PREVIEW</string>
    <string name="address">Address</string>
    <string name="upload">upload</string>
    <string name="edit">EDIT</string>
    <string name="resume_pic">resume_pic</string>
    <string name="university">University</string>
</resources>