<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    android:background="@drawable/adapter_background">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/experience"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/delete_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/company_name"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/job_title"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/company"
        app:layout_constraintStart_toStartOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/company" />

    <TextView
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/start_date"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/job"
        app:layout_constraintTop_toBottomOf="@+id/job" />

    <TextView
        android:id="@+id/end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/end_date"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/job"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <TextView
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/details"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/end"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <ImageButton
        android:id="@+id/delete_experience"
        android:layout_width="50sp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:srcCompat="@drawable/ic_delete"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>