<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    android:background="@drawable/adapter_background">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48sp"
        android:padding="10sp"
        android:text="@string/projects"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/delete_project"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/project_name"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_single_line_text_background"
        android:gravity="center_vertical"
        android:hint="@string/description"
        android:minHeight="48sp"
        android:padding="5sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/project"
        app:layout_constraintStart_toStartOf="@+id/project"
        app:layout_constraintTop_toBottomOf="@+id/project"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/delete_project"
        android:layout_width="50sp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29"
        app:srcCompat="@drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>