<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_sign_up_background"
    tools:context=".FragmentForgetPassword">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="#039BE5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/forget_email"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:padding="10sp"
        android:textColor="@color/input_font"
        android:textColorHint="#838383"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/send_mail_button"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/forget_email"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/forget_email" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/send_mail_button"
        app:layout_constraintEnd_toStartOf="@+id/send_mail_button"
        app:layout_constraintStart_toStartOf="@+id/forget_email"
        app:layout_constraintTop_toTopOf="@+id/send_mail_button" />
</androidx.constraintlayout.widget.ConstraintLayout>