<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_sign_up_background"
    tools:context=".FragmentLog_in">

    <TextView
        android:id="@+id/jump_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/don_t_have_account_sign_up"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLength="60"
        android:padding="10dp"
        android:textColor="@color/input_font"
        android:textColorHint="#838383"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/text_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:padding="10dp"
        android:textColor="@color/input_font"
        android:textColorHint="#838383"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#0091EA"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:text="@string/forget_password"
        android:textColor="#D32F2F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>